creating-containers-in-header

--- a/index.html
+++ b/index.html
@@ -26,36 +26,44 @@
   <body>
     <!--top-line-fixed-->
     <header class="page-header">
-      <nav class="header-nav">
-        <a class="logo header-logo" href="./index.html"
-          >Web<span class="logo-part">Studio</span></a
-        >
-        <ul class="nav-list">
-          <li class="nav-item">
-            <a class="nav-link" href="./index.html">Studio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="">Portfolio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="contacts">
-        <ul class="contacts-list">
-          <li class="contacts-item">
-            <a class="contacts-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+      <div class="container">
+        <nav class="header-nav">
+          <div class="container">
+            <a class="logo header-logo" href="./index.html"
+              >Web<span class="logo-part">Studio</span></a
             >
-          </li>
-          <li class="contacts-item">
-            <a class="contacts-link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+            <ul class="nav-list">
+              <div class="container">
+                <li class="nav-item">
+                  <a class="nav-link" href="./index.html">Studio</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="">Portfolio</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="">Contacts</a>
+                </li>
+              </div>
+            </ul>
+          </div>
+        </nav>
+        <address class="contacts">
+          <ul class="contacts-list">
+            <div class="container">
+              <li class="contacts-item">
+                <a class="contacts-link" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="contacts-item">
+                <a class="contacts-link" href="tel:+110001111111"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </div>
+          </ul>
+        </address>
+      </div>
     </header>
     <!--hero-image-scrolls-->
     <main class="page-main">
