experiments-with-margins-in-header

--- a/index.html
+++ b/index.html
@@ -29,19 +29,27 @@
       <div class="container">
         <nav class="header-nav">
           <div class="container">
-            <a class="logo header-logo" href="./index.html"
-              >Web<span class="logo-part">Studio</span></a
-            >
+            <div class="container header-logo">
+              <a class="logo header-logo" href="./index.html"
+                >Web<span class="logo-part">Studio</span></a
+              >
+            </div>
             <ul class="nav-list">
               <div class="container">
                 <li class="nav-item">
-                  <a class="nav-link" href="./index.html">Studio</a>
+                  <div class="container">
+                    <a class="nav-link" href="./index.html">Studio</a>
+                  </div>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="">Portfolio</a>
+                  <div class="container">
+                    <a class="nav-link" href="">Portfolio</a>
+                  </div>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="">Contacts</a>
+                  <div class="container">
+                    <a class="nav-link" href="">Contacts</a>
+                  </div>
                 </li>
               </div>
             </ul>
@@ -51,14 +59,18 @@
           <ul class="contacts-list">
             <div class="container">
               <li class="contacts-item">
-                <a class="contacts-link" href="mailto:info@devstudio.com"
-                  >info@devstudio.com</a
-                >
+                <div class="container">
+                  <a class="contacts-link" href="mailto:info@devstudio.com"
+                    >info@devstudio.com</a
+                  >
+                </div>
               </li>
               <li class="contacts-item">
-                <a class="contacts-link" href="tel:+110001111111"
-                  >+11 (000) 111-11-11</a
-                >
+                <div class="container">
+                  <a class="contacts-link" href="tel:+110001111111"
+                    >+11 (000) 111-11-11</a
+                  >
+                </div>
               </li>
             </div>
           </ul>
