experiments-with-margins-in-header-continue

--- a/index.html
+++ b/index.html
@@ -60,14 +60,20 @@
             <div class="container">
               <li class="contacts-item">
                 <div class="container">
-                  <a class="contacts-link" href="mailto:info@devstudio.com"
+                  <a
+                    class="contacts-link"
+                    href="mailto:info@devstudio.com"
+                    target="_blank"
                     >info@devstudio.com</a
                   >
                 </div>
               </li>
               <li class="contacts-item">
                 <div class="container">
-                  <a class="contacts-link" href="tel:+110001111111"
+                  <a
+                    class="contacts-link"
+                    href="tel:+110001111111"
+                    target="_blank"
                     >+11 (000) 111-11-11</a
                   >
                 </div>
@@ -80,48 +86,60 @@
     <!--hero-image-scrolls-->
     <main class="page-main">
       <section class="page-main-section">
-        <!--page-1-part-1-->
-        <h1 class="page-main-section-title">
-          Effective Solutions for Your Business
-        </h1>
-        <button class="page-main-section-button" type="button">
-          Order Service
-        </button>
+        <div class="container">
+          <!--page-1-part-1-->
+          <h1 class="page-main-section-title">
+            Effective Solutions for Your Business
+          </h1>
+          <button class="page-main-section-button" type="button">
+            Order Service
+          </button>
+        </div>
       </section>
       <!--section-1-scrolls-->
       <section class="page-main-first-section">
-        <h2 class="page-main-first-section-title">Benefits</h2>
-        <!--page-1-part-2-->
-        <ul class="page-main-first-section-list">
-          <li class="page-main-first-section-item">
-            <h3 class="page-main-first-section-item-title">Strategy</h3>
-            <p class="page-main-first-section-item-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="page-main-first-section-item">
-            <h3 class="page-main-first-section-item-title">Punctuality</h3>
-            <p class="page-main-first-section-item-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="page-main-first-section-item">
-            <h3 class="page-main-first-section-item-title">Diligence</h3>
-            <p class="page-main-first-section-item-text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="page-main-first-section-item">
-            <h3 class="page-main-first-section-item-title">Technologies</h3>
-            <p class="page-main-first-section-item-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="page-main-first-section-title">Benefits</h2>
+          <!--page-1-part-2-->
+          <ul class="page-main-first-section-list">
+            <li class="page-main-first-section-item">
+              <div class="container">
+                <h3 class="page-main-first-section-item-title">Strategy</h3>
+                <p class="page-main-first-section-item-text">
+                  Our goal is to identify the business problem to walk away with
+                  the perfect and creative solution.
+                </p>
+              </div>
+            </li>
+            <li class="page-main-first-section-item">
+              <div class="container">
+                <h3 class="page-main-first-section-item-title">Punctuality</h3>
+                <p class="page-main-first-section-item-text">
+                  Bring the key message to the brand's audience for the best
+                  price within the shortest possible time.
+                </p>
+              </div>
+            </li>
+            <li class="page-main-first-section-item">
+              <div class="container">
+                <h3 class="page-main-first-section-item-title">Diligence</h3>
+                <p class="page-main-first-section-item-text">
+                  Research and confirm brands that present the strongest digital
+                  growth opportunities and minimize risk.
+                </p>
+              </div>
+            </li>
+            <li class="page-main-first-section-item">
+              <div class="container">
+                <h3 class="page-main-first-section-item-title">Technologies</h3>
+                <p class="page-main-first-section-item-text">
+                  Design practice focused on digital experiences. We bring forth
+                  a deep passion for problem-solving.
+                </p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
       <!--section-2-scrolls-->
       <section class="page-main-second">
