--- a/index.html
+++ b/index.html
@@ -143,126 +143,132 @@
       </section>
       <!--section-2-scrolls-->
       <section class="page-main-second">
-        <h2 class="page-main-second-title">Our Team</h2>
-        <ul class="page-main-second-list">
-          <li class="page-main-second-list-item">
-            <img
-              class="page-main-second-list-img"
-              width="264"
-              src="./images/mark-guerrero.jpg"
-              alt="Photo by Mark Guerrero, product Designer"
-            />
-            <h3 class="page-main-second-list-title">Mark Guerrero</h3>
-            <p class="page-main-second-list-text">Product Designer</p>
-          </li>
-          <li class="page-main-second-list-item">
-            <img
-              class="page-main-second-list-img"
-              width="264"
-              src="./images/tom-ford.jpg"
-              alt="Photo by Tom Ford, frontend Developer"
-            />
-            <h3 class="page-main-second-list-title">Tom Ford</h3>
-            <p class="page-main-second-list-text">Frontend Developer</p>
-          </li>
-          <li class="page-main-second-list-item">
-            <img
-              class="page-main-second-list-img"
-              width="264"
-              src="./images/camila-garcia.jpg"
-              alt="Photo by Camila Garcia, Marketing"
-            />
-            <h3 class="page-main-second-list-title">Camila Garcia</h3>
-            <p class="page-main-second-list-text">Marketing</p>
-          </li>
-          <li class="page-main-second-list-item">
-            <img
-              class="page-main-second-list-img"
-              width="264"
-              src="./images/daniel-wilson.jpg"
-              alt="Photo by Daniel Wilson, UI Designer"
-            />
-            <h3 class="page-main-second-list-title">Daniel Wilson</h3>
-            <p class="page-main-second-list-text">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="page-main-second-title">Our Team</h2>
+          <ul class="page-main-second-list">
+            <li class="page-main-second-list-item">
+              <img
+                class="page-main-second-list-img"
+                width="264"
+                src="./images/team/mark-guerrero.jpg"
+                alt="Photo by Mark Guerrero, product Designer"
+              />
+              <h3 class="page-main-second-list-title">Mark Guerrero</h3>
+              <p class="page-main-second-list-text">Product Designer</p>
+            </li>
+            <li class="page-main-second-list-item">
+              <img
+                class="page-main-second-list-img"
+                width="264"
+                src="./images/team/tom-ford.jpg"
+                alt="Photo by Tom Ford, frontend Developer"
+              />
+              <h3 class="page-main-second-list-title">Tom Ford</h3>
+              <p class="page-main-second-list-text">Frontend Developer</p>
+            </li>
+            <li class="page-main-second-list-item">
+              <img
+                class="page-main-second-list-img"
+                width="264"
+                src="./images/team/camila-garcia.jpg"
+                alt="Photo by Camila Garcia, Marketing"
+              />
+              <h3 class="page-main-second-list-title">Camila Garcia</h3>
+              <p class="page-main-second-list-text">Marketing</p>
+            </li>
+            <li class="page-main-second-list-item">
+              <img
+                class="page-main-second-list-img"
+                width="264"
+                src="./images/team/daniel-wilson.jpg"
+                alt="Photo by Daniel Wilson, UI Designer"
+              />
+              <h3 class="page-main-second-list-title">Daniel Wilson</h3>
+              <p class="page-main-second-list-text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!--section-3-scrolls-->
       <section class="page-main-third">
-        <h2 class="page-main-second-title">Our Portfolio</h2>
-        <ul class="page-main-second-list">
-          <li class="page-main-second-list-item">
-            <img
-              class="page-main-second-list-img"
-              width="360"
-              src="./images/banking-app.jpg"
-              alt="Photo banking-app"
-            />
-            <h3 class="page-main-second-list-title">Banking App</h3>
-            <p class="page-main-second-list-text">App</p>
-          </li>
-          <li class="page-main-second-list-item">
-            <img
-              class="page-main-second-list-img"
-              width="360"
-              src="./images/cashless-payment.jpg"
-              alt="Photo cashless-payment"
-            />
-            <h3 class="page-main-second-list-title">Cashless Payment</h3>
-            <p class="page-main-second-list-text">Marketing</p>
-          </li>
-          <li class="page-main-second-list-item">
-            <img
-              class="page-main-second-list-img"
-              width="360"
-              src="./images/meditation-app.jpg"
-              alt="Photo Meditation App"
-            />
-            <h3 class="page-main-second-list-title">Meditation App</h3>
-            <p class="page-main-second-list-text">App</p>
-          </li>
-          <li class="page-main-second-list-item">
-            <img
-              class="page-main-second-list-img"
-              width="360"
-              src="./images/taxi-service.jpg"
-              alt="Photo taxi-service"
-            />
-            <h3 class="page-main-second-list-title">Taxi Service</h3>
-            <p class="page-main-second-list-text">Marketing</p>
-          </li>
-          <li class="page-main-second-list-item">
-            <img
-              class="page-main-second-list-img"
-              width="360"
-              src="./images/screen-illustrations.jpg"
-              alt="Photo screen-illustrations"
-            />
-            <h3 class="page-main-second-list-title">Screen Illustrations</h3>
-            <p class="page-main-second-list-text">Design</p>
-          </li>
-          <li class="page-main-second-list-item">
-            <img
-              class="page-main-second-list-img"
-              width="360"
-              src="./images/online-courses.jpg"
-              alt="Photo online-courses"
-            />
-            <h3 class="page-main-second-list-title">Online Courses</h3>
-            <p class="page-main-second-list-text">Marketing</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="page-main-second-title">Our Portfolio</h2>
+          <ul class="page-main-second-list">
+            <li class="page-main-second-list-item">
+              <img
+                class="page-main-second-list-img"
+                width="360"
+                src="./images/portfolio/banking-app.jpg"
+                alt="Photo banking-app"
+              />
+              <h3 class="page-main-second-list-title">Banking App</h3>
+              <p class="page-main-second-list-text">App</p>
+            </li>
+            <li class="page-main-second-list-item">
+              <img
+                class="page-main-second-list-img"
+                width="360"
+                src="./images/portfolio/cashless-payment.jpg"
+                alt="Photo cashless-payment"
+              />
+              <h3 class="page-main-second-list-title">Cashless Payment</h3>
+              <p class="page-main-second-list-text">Marketing</p>
+            </li>
+            <li class="page-main-second-list-item">
+              <img
+                class="page-main-second-list-img"
+                width="360"
+                src="./images/portfolio/meditation-app.jpg"
+                alt="Photo Meditation App"
+              />
+              <h3 class="page-main-second-list-title">Meditation App</h3>
+              <p class="page-main-second-list-text">App</p>
+            </li>
+            <li class="page-main-second-list-item">
+              <img
+                class="page-main-second-list-img"
+                width="360"
+                src="./images/portfolio/taxi-service.jpg"
+                alt="Photo taxi-service"
+              />
+              <h3 class="page-main-second-list-title">Taxi Service</h3>
+              <p class="page-main-second-list-text">Marketing</p>
+            </li>
+            <li class="page-main-second-list-item">
+              <img
+                class="page-main-second-list-img"
+                width="360"
+                src="./images/portfolio/screen-illustrations.jpg"
+                alt="Photo screen-illustrations"
+              />
+              <h3 class="page-main-second-list-title">Screen Illustrations</h3>
+              <p class="page-main-second-list-text">Design</p>
+            </li>
+            <li class="page-main-second-list-item">
+              <img
+                class="page-main-second-list-img"
+                width="360"
+                src="./images/portfolio/online-courses.jpg"
+                alt="Photo online-courses"
+              />
+              <h3 class="page-main-second-list-title">Online Courses</h3>
+              <p class="page-main-second-list-text">Marketing</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!--footer-scrolls-->
     <footer class="page-footer">
-      <a class="logo footer-logo" href="./index.html"
-        >Web<span class="logo-part">Studio</span></a
-      >
-      <p class="page-footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a class="logo footer-logo" href="./index.html"
+          >Web<span class="logo-part">Studio</span></a
+        >
+        <p class="page-footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
