style-header-hero

--- a/index.html
+++ b/index.html
@@ -28,66 +28,45 @@
     <header class="page-header">
       <div class="container">
         <nav class="header-nav">
-          <div class="container">
-            <div class="container header-logo">
-              <a class="logo header-logo" href="./index.html"
-                >Web<span class="logo-part">Studio</span></a
-              >
-            </div>
-            <ul class="nav-list">
-              <div class="container">
-                <li class="nav-item">
-                  <div class="container">
-                    <a class="nav-link" href="./index.html">Studio</a>
-                  </div>
-                </li>
-                <li class="nav-item">
-                  <div class="container">
-                    <a class="nav-link" href="">Portfolio</a>
-                  </div>
-                </li>
-                <li class="nav-item">
-                  <div class="container">
-                    <a class="nav-link" href="">Contacts</a>
-                  </div>
-                </li>
-              </div>
-            </ul>
-          </div>
+          <a class="logo header-logo" href="./index.html"
+            >Web<span class="logo-part">Studio</span></a
+          >
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a class="nav-link" href="./index.html">Studio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="">Contacts</a>
+            </li>
+          </ul>
         </nav>
         <address class="contacts">
           <ul class="contacts-list">
-            <div class="container">
-              <li class="contacts-item">
-                <div class="container">
-                  <a
-                    class="contacts-link"
-                    href="mailto:info@devstudio.com"
-                    target="_blank"
-                    >info@devstudio.com</a
-                  >
-                </div>
-              </li>
-              <li class="contacts-item">
-                <div class="container">
-                  <a
-                    class="contacts-link"
-                    href="tel:+110001111111"
-                    target="_blank"
-                    >+11 (000) 111-11-11</a
-                  >
-                </div>
-              </li>
-            </div>
+            <li class="contacts-item">
+              <a
+                class="contacts-link"
+                href="mailto:info@devstudio.com"
+                target="_blank"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="contacts-item">
+              <a class="contacts-link" href="tel:+110001111111" target="_blank"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
           </ul>
         </address>
       </div>
     </header>
     <!--hero-image-scrolls-->
     <main class="page-main">
+      <!--page-1-part-1-->
       <section class="page-main-section">
-        <div class="container">
-          <!--page-1-part-1-->
+        <div class="container page-main-section-container">
           <h1 class="page-main-section-title">
             Effective Solutions for Your Business
           </h1>
@@ -96,53 +75,44 @@
           </button>
         </div>
       </section>
-      <!--section-1-scrolls-->
-      <section class="page-main-first-section">
+      <!--section-1-scrolls--page-1-part-2-->
+      <section class="page-main-first-section section-paddings">
         <div class="container">
           <h2 class="page-main-first-section-title">Benefits</h2>
-          <!--page-1-part-2-->
           <ul class="page-main-first-section-list">
             <li class="page-main-first-section-item">
-              <div class="container">
-                <h3 class="page-main-first-section-item-title">Strategy</h3>
-                <p class="page-main-first-section-item-text">
-                  Our goal is to identify the business problem to walk away with
-                  the perfect and creative solution.
-                </p>
-              </div>
+              <h3 class="page-main-first-section-item-title">Strategy</h3>
+              <p class="page-main-first-section-item-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
             </li>
             <li class="page-main-first-section-item">
-              <div class="container">
-                <h3 class="page-main-first-section-item-title">Punctuality</h3>
-                <p class="page-main-first-section-item-text">
-                  Bring the key message to the brand's audience for the best
-                  price within the shortest possible time.
-                </p>
-              </div>
+              <h3 class="page-main-first-section-item-title">Punctuality</h3>
+              <p class="page-main-first-section-item-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
             </li>
             <li class="page-main-first-section-item">
-              <div class="container">
-                <h3 class="page-main-first-section-item-title">Diligence</h3>
-                <p class="page-main-first-section-item-text">
-                  Research and confirm brands that present the strongest digital
-                  growth opportunities and minimize risk.
-                </p>
-              </div>
+              <h3 class="page-main-first-section-item-title">Diligence</h3>
+              <p class="page-main-first-section-item-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
             </li>
             <li class="page-main-first-section-item">
-              <div class="container">
-                <h3 class="page-main-first-section-item-title">Technologies</h3>
-                <p class="page-main-first-section-item-text">
-                  Design practice focused on digital experiences. We bring forth
-                  a deep passion for problem-solving.
-                </p>
-              </div>
+              <h3 class="page-main-first-section-item-title">Technologies</h3>
+              <p class="page-main-first-section-item-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
             </li>
           </ul>
         </div>
       </section>
       <!--section-2-scrolls-->
-      <section class="page-main-second">
+      <section class="page-main-second section-paddings">
         <div class="container">
           <h2 class="page-main-second-title">Our Team</h2>
           <ul class="page-main-second-list">
@@ -190,7 +160,7 @@
         </div>
       </section>
       <!--section-3-scrolls-->
-      <section class="page-main-third">
+      <section class="page-main-third section-paddings">
         <div class="container">
           <h2 class="page-main-second-title">Our Portfolio</h2>
           <ul class="page-main-second-list">
