--- a/index.html
+++ b/index.html
@@ -163,66 +163,84 @@
       <section class="page-main-third section-paddings">
         <div class="container">
           <h2 class="page-main-second-title">Our Portfolio</h2>
-          <ul class="page-main-second-list">
-            <li class="page-main-second-list-item">
+          <ul class="page-main-third-list">
+            <li class="page-main-third-list-item">
               <img
                 class="page-main-second-list-img"
                 width="360"
                 src="./images/portfolio/banking-app.jpg"
                 alt="Photo banking-app"
               />
-              <h3 class="page-main-second-list-title">Banking App</h3>
-              <p class="page-main-second-list-text">App</p>
+              <h3 class="page-main-second-list-title portfolio-padding">
+                Banking App
+              </h3>
+              <p class="page-main-second-list-text portfolio-padding">App</p>
             </li>
-            <li class="page-main-second-list-item">
+            <li class="page-main-third-list-item">
               <img
                 class="page-main-second-list-img"
                 width="360"
                 src="./images/portfolio/cashless-payment.jpg"
                 alt="Photo cashless-payment"
               />
-              <h3 class="page-main-second-list-title">Cashless Payment</h3>
-              <p class="page-main-second-list-text">Marketing</p>
+              <h3 class="page-main-second-list-title portfolio-padding">
+                Cashless Payment
+              </h3>
+              <p class="page-main-second-list-text portfolio-padding">
+                Marketing
+              </p>
             </li>
-            <li class="page-main-second-list-item">
+            <li class="page-main-third-list-item">
               <img
                 class="page-main-second-list-img"
                 width="360"
                 src="./images/portfolio/meditation-app.jpg"
                 alt="Photo Meditation App"
               />
-              <h3 class="page-main-second-list-title">Meditation App</h3>
-              <p class="page-main-second-list-text">App</p>
+              <h3 class="page-main-second-list-title portfolio-padding">
+                Meditation App
+              </h3>
+              <p class="page-main-second-list-text portfolio-padding">App</p>
             </li>
-            <li class="page-main-second-list-item">
+            <li class="page-main-third-list-item">
               <img
                 class="page-main-second-list-img"
                 width="360"
                 src="./images/portfolio/taxi-service.jpg"
                 alt="Photo taxi-service"
               />
-              <h3 class="page-main-second-list-title">Taxi Service</h3>
-              <p class="page-main-second-list-text">Marketing</p>
+              <h3 class="page-main-second-list-title portfolio-padding">
+                Taxi Service
+              </h3>
+              <p class="page-main-second-list-text portfolio-padding">
+                Marketing
+              </p>
             </li>
-            <li class="page-main-second-list-item">
+            <li class="page-main-third-list-item">
               <img
                 class="page-main-second-list-img"
                 width="360"
                 src="./images/portfolio/screen-illustrations.jpg"
                 alt="Photo screen-illustrations"
               />
-              <h3 class="page-main-second-list-title">Screen Illustrations</h3>
-              <p class="page-main-second-list-text">Design</p>
+              <h3 class="page-main-second-list-title portfolio-padding">
+                Screen Illustrations
+              </h3>
+              <p class="page-main-second-list-text portfolio-padding">Design</p>
             </li>
-            <li class="page-main-second-list-item">
+            <li class="page-main-third-list-item">
               <img
                 class="page-main-second-list-img"
                 width="360"
                 src="./images/portfolio/online-courses.jpg"
                 alt="Photo online-courses"
               />
-              <h3 class="page-main-second-list-title">Online Courses</h3>
-              <p class="page-main-second-list-text">Marketing</p>
+              <h3 class="page-main-second-list-title portfolio-padding">
+                Online Courses
+              </h3>
+              <p class="page-main-second-list-text portfolio-padding">
+                Marketing
+              </p>
             </li>
           </ul>
         </div>
