fixed-fourth-section

--- a/index.html
+++ b/index.html
@@ -171,10 +171,12 @@
                 src="./images/portfolio/banking-app.jpg"
                 alt="Photo banking-app"
               />
-              <h3 class="page-main-second-list-title portfolio-padding">
-                Banking App
-              </h3>
-              <p class="page-main-second-list-text portfolio-padding">App</p>
+              <div class="third-list-item">
+                <h3 class="page-main-second-list-title portfolio-padding">
+                  Banking App
+                </h3>
+                <p class="page-main-second-list-text portfolio-padding">App</p>
+              </div>
             </li>
             <li class="page-main-third-list-item">
               <img
@@ -183,12 +185,14 @@
                 src="./images/portfolio/cashless-payment.jpg"
                 alt="Photo cashless-payment"
               />
-              <h3 class="page-main-second-list-title portfolio-padding">
-                Cashless Payment
-              </h3>
-              <p class="page-main-second-list-text portfolio-padding">
-                Marketing
-              </p>
+              <div class="third-list-item">
+                <h3 class="page-main-second-list-title portfolio-padding">
+                  Cashless Payment
+                </h3>
+                <p class="page-main-second-list-text portfolio-padding">
+                  Marketing
+                </p>
+              </div>
             </li>
             <li class="page-main-third-list-item">
               <img
@@ -197,10 +201,12 @@
                 src="./images/portfolio/meditation-app.jpg"
                 alt="Photo Meditation App"
               />
-              <h3 class="page-main-second-list-title portfolio-padding">
-                Meditation App
-              </h3>
-              <p class="page-main-second-list-text portfolio-padding">App</p>
+              <div class="third-list-item">
+                <h3 class="page-main-second-list-title portfolio-padding">
+                  Meditation App
+                </h3>
+                <p class="page-main-second-list-text portfolio-padding">App</p>
+              </div>
             </li>
             <li class="page-main-third-list-item">
               <img
@@ -209,12 +215,14 @@
                 src="./images/portfolio/taxi-service.jpg"
                 alt="Photo taxi-service"
               />
-              <h3 class="page-main-second-list-title portfolio-padding">
-                Taxi Service
-              </h3>
-              <p class="page-main-second-list-text portfolio-padding">
-                Marketing
-              </p>
+              <div class="third-list-item">
+                <h3 class="page-main-second-list-title portfolio-padding">
+                  Taxi Service
+                </h3>
+                <p class="page-main-second-list-text portfolio-padding">
+                  Marketing
+                </p>
+              </div>
             </li>
             <li class="page-main-third-list-item">
               <img
@@ -223,10 +231,14 @@
                 src="./images/portfolio/screen-illustrations.jpg"
                 alt="Photo screen-illustrations"
               />
-              <h3 class="page-main-second-list-title portfolio-padding">
-                Screen Illustrations
-              </h3>
-              <p class="page-main-second-list-text portfolio-padding">Design</p>
+              <div class="third-list-item">
+                <h3 class="page-main-second-list-title portfolio-padding">
+                  Screen Illustrations
+                </h3>
+                <p class="page-main-second-list-text portfolio-padding">
+                  Design
+                </p>
+              </div>
             </li>
             <li class="page-main-third-list-item">
               <img
@@ -235,12 +247,14 @@
                 src="./images/portfolio/online-courses.jpg"
                 alt="Photo online-courses"
               />
-              <h3 class="page-main-second-list-title portfolio-padding">
-                Online Courses
-              </h3>
-              <p class="page-main-second-list-text portfolio-padding">
-                Marketing
-              </p>
+              <div class="third-list-item">
+                <h3 class="page-main-second-list-title portfolio-padding">
+                  Online Courses
+                </h3>
+                <p class="page-main-second-list-text portfolio-padding">
+                  Marketing
+                </p>
+              </div>
             </li>
           </ul>
         </div>
