fixed-third-section

--- a/index.html
+++ b/index.html
@@ -123,8 +123,10 @@
                 src="./images/team/mark-guerrero.jpg"
                 alt="Photo by Mark Guerrero, product Designer"
               />
-              <h3 class="page-main-second-list-title">Mark Guerrero</h3>
-              <p class="page-main-second-list-text">Product Designer</p>
+              <div class="our-team">
+                <h3 class="page-main-second-list-title">Mark Guerrero</h3>
+                <p class="page-main-second-list-text">Product Designer</p>
+              </div>
             </li>
             <li class="page-main-second-list-item">
               <img
@@ -133,8 +135,10 @@
                 src="./images/team/tom-ford.jpg"
                 alt="Photo by Tom Ford, frontend Developer"
               />
-              <h3 class="page-main-second-list-title">Tom Ford</h3>
-              <p class="page-main-second-list-text">Frontend Developer</p>
+              <div class="our-team">
+                <h3 class="page-main-second-list-title">Tom Ford</h3>
+                <p class="page-main-second-list-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="page-main-second-list-item">
               <img
@@ -143,8 +147,10 @@
                 src="./images/team/camila-garcia.jpg"
                 alt="Photo by Camila Garcia, Marketing"
               />
-              <h3 class="page-main-second-list-title">Camila Garcia</h3>
-              <p class="page-main-second-list-text">Marketing</p>
+              <div class="our-team">
+                <h3 class="page-main-second-list-title">Camila Garcia</h3>
+                <p class="page-main-second-list-text">Marketing</p>
+              </div>
             </li>
             <li class="page-main-second-list-item">
               <img
@@ -153,8 +159,10 @@
                 src="./images/team/daniel-wilson.jpg"
                 alt="Photo by Daniel Wilson, UI Designer"
               />
-              <h3 class="page-main-second-list-title">Daniel Wilson</h3>
-              <p class="page-main-second-list-text">UI Designer</p>
+              <div class="our-team">
+                <h3 class="page-main-second-list-title">Daniel Wilson</h3>
+                <p class="page-main-second-list-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
