fixed-bug-after-feedback-mentor

--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
     <main class="page-main">
       <!--page-1-part-1-->
       <section class="page-main-section">
-        <div class="container page-main-section-container">
+        <!-- page-main-section-container -->
+        <div class="container">
           <h1 class="page-main-section-title">
             Effective Solutions for Your Business
           </h1>
